--- a/apps/trolls_goals/public/css/style.css
+++ b/apps/trolls_goals/public/css/style.css
@@ -218,7 +218,7 @@ td { vertical-align: top; }
    Author: Red Pill Web Masons
    ========================================================================== */
 
-multiselect .dropdown-menu {
+/*multiselect .dropdown-menu {
   padding-left: 5px; 
   padding-right: 5px;
 }
@@ -226,7 +226,7 @@ multiselect .dropdown-menu {
 multiselect .dropdown-menu > li > a {
   padding: 3px 10px;
   cursor :pointer;
-}
+}*/
 
 .clickable {
   cursor: pointer;
@@ -234,6 +234,10 @@ multiselect .dropdown-menu > li > a {
 
 th {
   text-align: center;
+}
+
+.bold {
+  font-weight: bold;
 }
 
 /* START Sidebar styles */
@@ -282,7 +286,7 @@ th {
   }
 }
 /* END Sidebar styles */
-/* START day styles */
+/* START day/week/records_table styles */
 .time_container .time_header {
   display: inline;
 }
@@ -301,19 +305,61 @@ th {
   padding-right: 15px;
 }
 
-.inline-table-wrapper-wrapper {
-  margin-left: -15px;
-  margin-right: -15px;
+.domain-header .domain-title {
+  display: inline;
 }
-/* END day styles */
+
+.table tr td:first-child {
+  text-align: left;
+}
+
+.table tr td ~ td {
+  min-width: 33px;
+}
+
+.add-domain-button {
+  display: inline-table;
+}
+
+/* END day/week/records_table styles */
 /* START Tooltip styles */
+.popover {
+  padding: 0;
+}
+
 .popover-inner textarea {
   width: 100%;
 }
 
-.popover-inner .btn-primary {
+/*.popover-inner .btn-primary {
   width: 132px;
+}*/
+
+.small-grey-icon {
+  color: #bbb;
+  font-size: 9px;
+  cursor: pointer;
 }
+
+.small-grey-icon:hover,
+.parent-cell-trigger:hover .small-grey-icon,
+.parent-sibling-cell-trigger:hover + td .small-grey-icon {
+  color: #555;
+}
+
+.float-left {
+  float: left;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.float-right {
+  float: right;
+}
+
 /* END Tooltip styles */
 
 /* ==|== media queries ======================================================
