Remove "About" and "Contact" pages from "all" app (blog has corresponding pages) Update landing page: index.html -> views/index.ejs, with use of settings.base_url Change default subdomain behavior to redirect to landing page

--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -46,10 +46,20 @@
   </h2>
 
   <div class="box_gar">
-    <a href ="https://github.com/airandfingers"> <span> <img id="github"></span></a>
-    <a href="mailto:airandfingers@gmail.com"> <span class="glyphicon glyphicon-envelope"> </span> </a>
-    <a href="http://blog.ayoshitake.com"> <span class="glyphicon glyphicon-pencil"></span></a>
-    <a href="http://all.ayoshitake.com">  <span class="glyphicon glyphicon-folder-open">  </span> </a>
+    <a href="https://github.com/airandfingers">
+      <span>
+        <img id="github" />
+      </span>
+    </a>
+    <a href="mailto:airandfingers@gmail.com">
+      <span class="glyphicon glyphicon-envelope"></span>
+    </a>
+    <a href="http://blog.ayoshitake.com">
+      <span class="glyphicon glyphicon-pencil"></span>
+    </a>
+    <a href="<%= settings.protocol %>://all.<%= settings.base_url %>">
+      <span class="glyphicon glyphicon-folder-open"></span>
+    </a>
   </div>
 
   <img class="preload_blue" />
