Fix User Registration Restyle #login_main and #registration_main (standalone pages) Change "You must log in before you can access ___" message to show whole URL

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -119,11 +119,22 @@ header {
 #login_main {
     font-family: DESTROY, Paprika, sans-serif;
     margin: 100px 20px 20px 20px;
+    color: white;
 }
 
 #registration_main {
     font-family: DESTROY, Paprika, sans-serif;
     margin: 100px 20px 20px 20px;
+    color: white;
+}
+
+#login_main a, #registration_main a {
+    color: coral;
+    text-decoration: none;
+}
+
+#login_main a:hover, #registration_main a:hover {
+    color: red;
 }
 
 .dropdown_form {
