--- a/apps/trolls_goals/views/index.ejs
+++ b/apps/trolls_goals/views/index.ejs
@@ -13,6 +13,17 @@
         <navlink href="day" title="Today"></navlink>
         <navlink href="week" title="This Week"></navlink>
       </ul>
+      <button ng-show="! show_hidden" class="btn btn-primary btn-xs"
+              ng-init="show_hidden = false"
+              ng-click="show_hidden = true" title="Show hidden domains and areas">
+        Show Hidden
+        <span class="glyphicon glyphicon-eye-open"></span>
+      </button>
+      <button ng-show="show_hidden" class="btn btn-primary btn-xs"
+              ng-click="show_hidden = false" title="Hide hidden domains and areas">
+        Hide Hidden
+        <span class="glyphicon glyphicon-eye-close"></span>
+      </button>
     </div>
     <div id="page-content-wrapper">
       <div class="page-content">
