Add "Help" link to sidebar, pointing to TG blog post

--- a/apps/trolls_goals/views/index.ejs
+++ b/apps/trolls_goals/views/index.ejs
@@ -11,6 +11,7 @@
         <navlink href="day/{{today}}" title="Today"></navlink>
         <navlink href="week/{{today}}" title="This Week"></navlink>
       </ul>
+      <hr />
       <button ng-show="! show_hidden" class="btn btn-primary btn-xs"
               ng-init="show_hidden = false"
               ng-click="show_hidden = true" title="Show hidden domains and areas">
@@ -22,6 +23,8 @@
         Hide Hidden
         <span class="glyphicon glyphicon-eye-close"></span>
       </button>
+      <br />
+      <a href="http://blog.ayoshitake.com/?q=2014/07/14/building-trolls-goals-10" target="_blank">Help</a>
     </div>
     <div id="page-content-wrapper">
       <div class="page-content">
